# perry

./: .gitignore  API.py  AnsibleRunner.py  Cage-openrc.sh  GymWrapper.py  InteractiveEmulator.py  OpenStackNotes.md  README.md  Snippets.md  admin-openrc.sh  cage_simulation.py  change_remote_permission.yml  collect_results.py  conda_environment.yml  console.py  docker-compose.yml  emulator.py  environment.yml  loc.py  main.py  metrics_latest.tgz  perry.py  perry_dev.py  perry_docker.py  pyproject.toml  pyrightconfig.json  reset_openstack.py  terraform.tfstate  yinuo-openrc.sh
Strategy/: tabular_Q.py
ansible/: AnsibleRunner.py  ansible_local_runner.py  inventory
attacker/: Attacker.py  BFSAttacker.py  DFSAttacker.py  EnterpriseAttacker.py  EquifaxBaselineAttacker.py  GambitAttacker.py  GreedyAttacker.py  ICSTargeted.py  ICSTargetedTricked.py  PersistantAttacker.py  PersistentBFSAttacker.py  PersistentDFSAttacker.py  PersistentRandomAttacker.py  RandomAttacker.py  RingDFSAttacker.py  TwoPathAttacker.py  __init__.py  exceptions.py  operation_example.json
caldera_installation/: agent_install.py  install.sh
cli/: attacker.py  benchmark.py  cli_context.py  environment.py  experiment.py
config/: .gitignore  Config.py  config.yml  config_example.json  config_example.yml  cra_config_example.yml  enterprise_baseline.yml  enterprise_decoy.yml  enterprise_honeyservice.yml  experiment_config_defaults.yml  experiment_config_example.yml
data_analysis/: adaptive.ipynb  approximation.ipynb  attackers.ipynb  capabilities.ipynb  costBenefit.ipynb  darkside.ipynb  equifax.ipynb  (+12 more)
(+3457 files in other folders)
